--- a/main.css
+++ b/main.css
@@ -1,74 +1,125 @@
 * {
-	box-sizing: border-box;
-	font-weight: 5px; 
-	font-size: 25px;
+    box-sizing: border-box;
+    font-weight: 5px;
 }
 
+.OflHomeButton, .OflHomeButton:hover {
+    color: #FFF; 
+    display: inline-block;
+    font-size: 18px;
+    margin-right: 20px;
+    text-decoration: none;
+    line-height: 40px;
+    vertical-align: middle;
 
+}
+
+.OflHeader {
+    background-color: #8B4513;   
+    text-align: center;
+    width: 100%;      
+    color: #FFF;
+    font-weight: 600px;
+    margin-top: 0;
+}
+
+#backOrderSquare {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: #B76BA3;
+    line-height: 30px;
+    vertical-align: middle;
+}
+
+.OflFooter {
+    background-color: #8B4513;
+    text-align: center;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    color: #FFF;
+    font-weight: 600;
+}
+
+.landingButton, .landingButton:hover {
+    color: black;
+    font-size: 33px;
+    text-decoration: none;  
+}
+
+#landingLink {
+    color: #000;
+}
+
+select {
+    height: 28px;
+}
+
+.parDesc {
+    padding: 20px;
+    font-size: 30px;
+}
+
+/*#landingHead {
+    text-align: center;
+    font-size: 39px;
+}*/
+
+.exampleEntry.onBackOrder {
+    background-color: #B76BA3;
+    border-color: #FFF;
+}
+
+#CapstoneDescription {
+    color: #000;
+    text-align: center;
+    margin-top: 80px;
+}
 
 form label {
-	color: black;
-	display: inline-block;
-	width: 200px;
+    color: #000;
+    display: inline-block;
+    width: 200px;
 }
 
-form .order_cells {
-	display: inline-block;
-}
-
-h1 {
-	color: white;
-}
-
-
-.login_body {
-	text-align: center;
-}
-
-.form_head {
-	padding: 20px;
-}
-
-
-
-.submit_button {
-	margin: auto;
-	text-align: center;
-	padding: 10px;
-}
-
-.ing_name {
-	color: white;
-	margin: 15px;
-	text-align: center;
-}
-
+/*.submitButton {
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+}*/
 
 body {
-	background-color: #0D254C;
-
+    padding-bottom: 50px;
+    margin: 0;
+    padding: 0;
+    background-color: #F6D155;
+    font-size: 1.6em;
+    color: #000;
 }
 
 
-.mock_form {
-	color: white;
-}
-
-.example_entry {
-	color: white;
-	max-width: auto; 
-	border-style: solid;
-	border-color: white;
-	padding: 10px;
-	margin: 20px;
-	text-align: center;
-
+.exampleEntry {
+    color: #000;
+    border-style: solid;
+    /*border-color: black;*/
+    text-align: left;
+    background-color: white;
 }
 
 
 /* mouse over link */
-.example_entry:hover {
-    color: #D3D3D3;
+.exampleEntry:hover {
+    color: #223A5E;
 }
 
 
+/*for landing page*/
+ul {
+    list-style-type: none;
+}
+
+li {
+    width: 100%;
+    text-align: center;
+}
