--- a/public/main.css
+++ b/public/main.css
@@ -123,3 +123,167 @@ li {
     width: 100%;
     text-align: center;
 }
+
+/*OTC helper styles start*/
+* {
+    font-family: 'Signika';
+    /*font-size: 22px;*/
+}
+
+p {
+    width: auto;
+    text-align: center;
+    font-size: 29px;
+}
+
+
+/* unvisited link */
+a:link {
+    color: #76323F;
+}
+
+/* visited link */
+a:visited {
+    color: #565656;
+}
+
+/* mouse over link */
+a:hover {
+    color: #C09F80;
+}
+
+/* selected link */
+a:active {
+    color: #D7CEC7;
+}
+
+/*.otcFooter {*/
+/*background-color: #000;*/
+/*text-align: center;*/
+/*width: 100%;*/
+/*position: fixed;*/
+/*left: 0;*/
+/*bottom: 0;*/
+/*font-weight: 600;*/
+/*}*/
+
+#landingLink {
+    display: inline-block;
+    font-size: 18px;
+    /*margin-right: 20px;*/
+    margin-left: 80px;
+    text-decoration: none;
+    line-height: 40px;
+    vertical-align: middle;
+}
+
+#enterInfoText {
+    color: #fff;
+}
+
+#otcHeader {
+    background-color: #fff;
+    width: 100%;
+    margin-top: 0;
+    /*color: #76323F;*/
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#otcFooter {
+    background-color: #fff;
+    width: 100%;
+    margin-top: 0;
+    font-size: 22px;
+    text-align: center;
+    font-weight: 600;
+    left: 0;
+    bottom: 0;
+    /*position: fixed;*/
+}
+
+#customerName, #itemName, #customerAddress, #customerPhone, #textArea {
+    background-color: #D7CEC7;
+    padding-bottom: 5px;
+    height: auto;
+}
+
+#formError div{
+    border: 2px solid #DC143C;
+    background-color: lightpink;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: left;
+    padding: 5px 10px;
+    font-size: 20px;
+}
+
+.delBtn {
+    border: none;
+    background-color: #C09F80;
+    float: right;
+}
+
+h3, h4 {
+    padding: 0;
+    margin: 0 0 10px 0;
+    width: 100%;
+}
+
+h4 {
+    display: inline-block;
+}
+
+.input-row {
+    padding: 5px;
+}
+
+input, textarea {
+    padding-left: 10px;
+}
+
+
+.customer {
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
+form {
+    text-align: center;
+}
+
+.output-entry-box {
+    text-align: center;
+    border-radius: 25px;
+    border: 4px solid #565656;
+    padding: 10px;
+    background-color: #C09F80;
+}
+
+#outer-text-box {
+    text-align: center;
+}
+
+
+main {
+    padding-top: 100px;
+}
+
+main.row {
+    margin-bottom: 20px;
+}
+
+.box-sm {
+    text-align: center;
+    /*padding: 25px;*/
+    border-radius: 25px;
+    background-color: #565656;
+    border: 2px solid #dab997;
+}
+
+body {
+    background-color: #D7CEC7;
+    padding: 0;
+    margin: 0;
+}
